<resources>
    <string name="app_name">My Cart</string>
    <string name="card">Card</string>
    <string name="search_hint">search</string>
    <string name="dong">đ</string>
    <string name="product_description">Product Description</string>
    <string name="sample_cost">99999</string>
    <string name="todo">TODO</string>
    <string name="my_cart">My Cart</string>
    <string name="quantity">Quantity</string>
    <string name="sum_price">Sum price</string>
    <string name="total">Total</string>
    <string name="imgViewIconCard">imgViewIconCard</string>
    <string name="imgButtonCheckout">imgButtonCheckout</string>
    <string name="dummyId">dummyid</string>
    <string name="imageButtonAddToCard">ImageButtonAddToCard</string>
    <string name="check_out">Check out</string>
    <string name="search">Search</string>
    <string name="sample_quantity">1</string>
    <string name="sample_product_name">Sample product name</string>
    <string name="sample_sum_price">999999</string>
</resources>