<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/item_product_background">

    <ImageView
        android:id="@+id/imgViewProduct"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtViewProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:singleLine="false"
        android:text="@string/product_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgViewProduct" />

    <TextView
        android:id="@+id/txtViewDong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/dong"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewProductDescription" />

    <TextView
        android:id="@+id/txtViewUnitPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:text="@string/sample_cost"
        app:layout_constraintLeft_toRightOf="@id/txtViewDong"
        app:layout_constraintRight_toLeftOf="@id/imgBtnAddToCart"
        app:layout_constraintTop_toTopOf="@id/txtViewDong" />

    <ImageButton
        android:id="@+id/imgBtnAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_baseline_add_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewProductDescription"
        android:contentDescription="@string/imageButtonAddToCard"/>

</androidx.constraintlayout.widget.ConstraintLayout>