<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyCartActivity">

    <ImageView
        android:id="@+id/imgViewIconCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_cart"
        android:contentDescription="@string/imgviewiconcard" />

    <TextView
        android:id="@+id/txtViewMyCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_cart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgViewIconCard"
        app:layout_constraintStart_toStartOf="@+id/imgViewIconCard"
        app:layout_constraintTop_toBottomOf="@+id/imgViewIconCard" />

    <TextView
        android:id="@+id/textViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:text="@string/quantity"
        app:layout_constraintRight_toLeftOf="@id/txtViewSumPrice"
        app:layout_constraintTop_toTopOf="@id/txtViewSumPrice"/>

    <TextView
        android:id="@+id/txtViewSumPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:text="@string/sum_price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewMyCard"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMyCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/totalPrice"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtViewSumPrice"/>

    <LinearLayout
        android:id="@+id/totalPrice"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/txtViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txtViewDong"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dong" />

        <TextView
            android:id="@+id/txtViewTotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="3"
            android:text="0" />

        <ImageButton
            android:id="@+id/imgButtonCheckout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:src="@drawable/ic_baseline_payment_24"
            android:contentDescription="@string/imgbuttoncheckout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>